tests/baselines/reference/assignmentCompatWithStringIndexer3.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer3.ts(7,8): error TS2304: Cannot find name 'A'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer3.ts(20,9): error TS2322: Type '{ [x: string]: string; }' is not assignable to type 'A<T>'.
  Index signatures are incompatible.
    Type 'string' is not assignable to type 'T'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer3.ts(21,9): error TS2322: Type 'A<T>' is not assignable to type '{ [x: string]: string; }'.
  Index signatures are incompatible.
    Type 'T' is not assignable to type 'string'.
      Type 'Derived' is not assignable to type 'string'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer3.ts (3 errors) ====
    // Derived type indexer must be subtype of base type indexer
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    var a: A;
           ~
!!! error TS2304: Cannot find name 'A'.
    var b1: { [x: string]: string; }
    a = b1; // error
    b1 = a; // error
    
    module Generics {
        class A<T extends Derived> {
            [x: string]: T;
        }
       
        function foo<T extends Derived>() {
            var a: A<T>;
            var b: { [x: string]: string; }
            a = b; // error
            ~
!!! error TS2322: Type '{ [x: string]: string; }' is not assignable to type '{|A|0|}<{|T|1|}>'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type '{|T|2|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer3.ts:13:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer3.ts:17:18
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer3.ts:17:18
            b = a; // error
            ~
!!! error TS2322: Type '{|A|0|}<{|T|1|}>' is not assignable to type '{ [x: string]: string; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type '{|T|2|}' is not assignable to type 'string'.
!!! error TS2322:       Type '{|Derived|3|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer3.ts:13:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer3.ts:17:18
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer3.ts:17:18
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer3.ts:4:11
        }
    }